--- a/public/src/index.html
+++ b/public/src/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Parkme</title>
+        <title></title>
+        <script src="//localhost:35729/livereload.js"></script>
         <link rel="stylesheet" href="/app.min.css">
-        <script src="/app.min.js"></script>
     </head>
     <body>
         <div id="app"></div>
+        <script src="/app.min.js"></script>
     </body>
 </html>
